@@ -33,7 +33,6 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
-import static org.mockito.Mockito.verifyZeroInteractions;
 import static org.mockito.Mockito.when;
 
 import android.adservices.common.AdTechIdentifier;
@@ -118,11 +117,17 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
     @Test
     public void testUpdatesProcessorEmptyJson() {
         when(mProtectedSignalsDaoMock.getSignalsByBuyer(ADTECH)).thenReturn(List.of());
+
+        SignalUpdates signalUpdates =
+                SignalUpdates.builder()
+                        .setUpdateJson(new JSONObject())
+                        .setUpdateSchemaVersion(mFakeFlags.getProtectedSignalsUpdateSchemaVersion())
+                        .build();
         mUpdateProcessingOrchestrator.processUpdates(
                 ADTECH,
                 PACKAGE,
                 NOW,
-                new JSONObject(),
+                signalUpdates,
                 DEV_CONTEXT,
                 mUpdateSignalsApiCalledStats,
                 mUpdateSignalsProcessReportedLoggerMock);
@@ -134,7 +139,7 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
                         mUpdateOutputArgumentCaptor.capture(),
                         any(UpdateSignalsProcessReportedLogger.class));
         assertUpdateOutputEquals(new UpdateOutput(), mUpdateOutputArgumentCaptor.getValue());
-        verifyZeroInteractions(mUpdateProcessorSelectorMock, mUpdateEncoderEventHandlerMock);
+        verifyNoMoreInteractions(mUpdateProcessorSelectorMock, mUpdateEncoderEventHandlerMock);
         verify(mProtectedSignalsDaoMock)
                 .insertAndDelete(ADTECH, NOW, Collections.emptyList(), Collections.emptyList());
         verify(mForcedEncoderMock).forceEncodingAndUpdateEncoderForBuyer(ADTECH);
@@ -142,7 +147,8 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
 
     @Test
     @ExpectErrorLogUtilWithExceptionCall(
-            errorCode = AD_SERVICES_ERROR_REPORTED__ERROR_CODE__PAS_UNPACK_SIGNAL_UPDATES_JSON_FAILURE)
+            errorCode =
+                    AD_SERVICES_ERROR_REPORTED__ERROR_CODE__PAS_UNPACK_SIGNAL_UPDATES_JSON_FAILURE)
     public void testUpdatesProcessorBadJson() throws Exception {
         final JSONException exception = new JSONException("JSONException for testing");
         when(mUpdateProcessorSelectorMock.getUpdateProcessor(TEST_PROCESSOR))
@@ -163,6 +169,11 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
 
         JSONObject commandToNumber = new JSONObject();
         commandToNumber.put(TEST_PROCESSOR, 1);
+        SignalUpdates signalUpdates =
+                SignalUpdates.builder()
+                        .setUpdateJson(commandToNumber)
+                        .setUpdateSchemaVersion(mFakeFlags.getProtectedSignalsUpdateSchemaVersion())
+                        .build();
         Throwable t =
                 assertThrows(
                         "Couldn't unpack signal updates JSON",
@@ -172,13 +183,13 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
                                         ADTECH,
                                         PACKAGE,
                                         NOW,
-                                        commandToNumber,
+                                        signalUpdates,
                                         DEV_CONTEXT,
                                         mUpdateSignalsApiCalledStats,
                                         mUpdateSignalsProcessReportedLoggerMock));
         assertEquals(exception, t.getCause());
         verify(mProtectedSignalsDaoMock).getSignalsByBuyer(ADTECH);
-        verifyZeroInteractions(mSignalEvictionControllerMock, mForcedEncoderMock);
+        verifyNoMoreInteractions(mSignalEvictionControllerMock, mForcedEncoderMock);
         verifyNoMoreInteractions(mProtectedSignalsDaoMock);
         assertEquals(
                 JSON_PROCESSING_STATUS_SYNTACTIC_ERROR,
@@ -189,6 +200,11 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
     public void testUpdatesProcessorSingleInsert() throws Exception {
         JSONObject json = new JSONObject();
         json.put(TEST_PROCESSOR, new JSONObject());
+        SignalUpdates signalUpdates =
+                SignalUpdates.builder()
+                        .setUpdateJson(json)
+                        .setUpdateSchemaVersion(mFakeFlags.getProtectedSignalsUpdateSchemaVersion())
+                        .build();
 
         when(mProtectedSignalsDaoMock.getSignalsByBuyer(any())).thenReturn(Collections.emptyList());
 
@@ -204,7 +220,7 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
                 ADTECH,
                 PACKAGE,
                 NOW,
-                json,
+                signalUpdates,
                 DEV_CONTEXT,
                 mUpdateSignalsApiCalledStats,
                 mUpdateSignalsProcessReportedLoggerMock);
@@ -227,6 +243,11 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
     public void testUpdatesProcessorSingleInsertJsonArray() throws Exception {
         JSONObject json = new JSONObject();
         json.put(TEST_PROCESSOR, new JSONArray());
+        SignalUpdates signalUpdates =
+                SignalUpdates.builder()
+                        .setUpdateJson(json)
+                        .setUpdateSchemaVersion(mFakeFlags.getProtectedSignalsUpdateSchemaVersion())
+                        .build();
 
         when(mProtectedSignalsDaoMock.getSignalsByBuyer(any())).thenReturn(Collections.emptyList());
 
@@ -242,7 +263,7 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
                 ADTECH,
                 PACKAGE,
                 NOW,
-                json,
+                signalUpdates,
                 DEV_CONTEXT,
                 mUpdateSignalsApiCalledStats,
                 mUpdateSignalsProcessReportedLoggerMock);
@@ -255,7 +276,7 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
                         mUpdateOutputArgumentCaptor.capture(),
                         any(UpdateSignalsProcessReportedLogger.class));
         assertUpdateOutputEquals(toReturn, mUpdateOutputArgumentCaptor.getValue());
-        List<DBProtectedSignal> expected = Arrays.asList(createSignal(KEY_1, VALUE));
+        List<DBProtectedSignal> expected = List.of(createSignal(KEY_1, VALUE));
         verify(mProtectedSignalsDaoMock)
                 .insertAndDelete(ADTECH, NOW, expected, Collections.emptyList());
         verify(mForcedEncoderMock).forceEncodingAndUpdateEncoderForBuyer(ADTECH);
@@ -267,6 +288,11 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
         DBProtectedSignal toKeep = createSignal(KEY_2, VALUE, 456L);
         JSONObject json = new JSONObject();
         json.put(TEST_PROCESSOR, new JSONObject());
+        SignalUpdates signalUpdates =
+                SignalUpdates.builder()
+                        .setUpdateJson(json)
+                        .setUpdateSchemaVersion(mFakeFlags.getProtectedSignalsUpdateSchemaVersion())
+                        .build();
 
         when(mProtectedSignalsDaoMock.getSignalsByBuyer(any()))
                 .thenReturn(Arrays.asList(toRemove, toKeep));
@@ -280,7 +306,7 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
                 ADTECH,
                 PACKAGE,
                 NOW,
-                json,
+                signalUpdates,
                 DEV_CONTEXT,
                 mUpdateSignalsApiCalledStats,
                 mUpdateSignalsProcessReportedLoggerMock);
@@ -295,7 +321,7 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
                         any(UpdateSignalsProcessReportedLogger.class));
         assertUpdateOutputEquals(toReturn, mUpdateOutputArgumentCaptor.getValue());
         verify(mProtectedSignalsDaoMock)
-                .insertAndDelete(ADTECH, NOW, Collections.emptyList(), Arrays.asList(toRemove));
+                .insertAndDelete(ADTECH, NOW, Collections.emptyList(), List.of(toRemove));
         verify(mForcedEncoderMock).forceEncodingAndUpdateEncoderForBuyer(ADTECH);
     }
 
@@ -304,6 +330,11 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
         JSONObject json = new JSONObject();
         json.put(TEST_PROCESSOR + 1, new JSONObject());
         json.put(TEST_PROCESSOR + 2, new JSONObject());
+        SignalUpdates signalUpdates =
+                SignalUpdates.builder()
+                        .setUpdateJson(json)
+                        .setUpdateSchemaVersion(mFakeFlags.getProtectedSignalsUpdateSchemaVersion())
+                        .build();
 
         when(mProtectedSignalsDaoMock.getSignalsByBuyer(any())).thenReturn(Collections.emptyList());
 
@@ -327,7 +358,7 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
                 ADTECH,
                 PACKAGE,
                 NOW,
-                json,
+                signalUpdates,
                 DEV_CONTEXT,
                 mUpdateSignalsApiCalledStats,
                 mUpdateSignalsProcessReportedLoggerMock);
@@ -357,14 +388,19 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
     }
 
     @Test
-    @ExpectErrorLogUtilCall(
-            errorCode = AD_SERVICES_ERROR_REPORTED__ERROR_CODE__PAS_COLLISION_ERROR)
+    @ExpectErrorLogUtilCall(errorCode = AD_SERVICES_ERROR_REPORTED__ERROR_CODE__PAS_COLLISION_ERROR)
     @ExpectErrorLogUtilWithExceptionCall(
-            errorCode = AD_SERVICES_ERROR_REPORTED__ERROR_CODE__PAS_JSON_PROCESSING_STATUS_SEMANTIC_ERROR)
+            errorCode =
+                    AD_SERVICES_ERROR_REPORTED__ERROR_CODE__PAS_JSON_PROCESSING_STATUS_SEMANTIC_ERROR)
     public void testUpdatesProcessorTwoInsertsSameKey() throws Exception {
         JSONObject json = new JSONObject();
         json.put(TEST_PROCESSOR + 1, new JSONObject());
         json.put(TEST_PROCESSOR + 2, new JSONObject());
+        SignalUpdates signalUpdates =
+                SignalUpdates.builder()
+                        .setUpdateJson(json)
+                        .setUpdateSchemaVersion(mFakeFlags.getProtectedSignalsUpdateSchemaVersion())
+                        .build();
 
         when(mProtectedSignalsDaoMock.getSignalsByBuyer(any())).thenReturn(Collections.emptyList());
 
@@ -387,11 +423,11 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
                                 ADTECH,
                                 PACKAGE,
                                 NOW,
-                                json,
+                                signalUpdates,
                                 DEV_CONTEXT,
                                 mUpdateSignalsApiCalledStats,
                                 mUpdateSignalsProcessReportedLoggerMock));
-        verifyZeroInteractions(mSignalEvictionControllerMock, mForcedEncoderMock);
+        verifyNoMoreInteractions(mSignalEvictionControllerMock, mForcedEncoderMock);
         assertEquals(
                 JSON_PROCESSING_STATUS_SEMANTIC_ERROR,
                 mUpdateSignalsApiCalledStats.build().getJsonProcessingStatus());
@@ -403,6 +439,11 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
         DBProtectedSignal toRemove2 = createSignal(KEY_1, VALUE, 456L);
         JSONObject json = new JSONObject();
         json.put(TEST_PROCESSOR, new JSONObject());
+        SignalUpdates signalUpdates =
+                SignalUpdates.builder()
+                        .setUpdateJson(json)
+                        .setUpdateSchemaVersion(mFakeFlags.getProtectedSignalsUpdateSchemaVersion())
+                        .build();
 
         when(mProtectedSignalsDaoMock.getSignalsByBuyer(any()))
                 .thenReturn(Arrays.asList(toRemove1, toRemove2));
@@ -417,7 +458,7 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
                 ADTECH,
                 PACKAGE,
                 NOW,
-                json,
+                signalUpdates,
                 DEV_CONTEXT,
                 mUpdateSignalsApiCalledStats,
                 mUpdateSignalsProcessReportedLoggerMock);
@@ -441,6 +482,11 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
     public void testUpdatesProcessorNoEncoderUpdates() throws JSONException {
         JSONObject json = new JSONObject();
         json.put(TEST_PROCESSOR, new JSONObject());
+        SignalUpdates signalUpdates =
+                SignalUpdates.builder()
+                        .setUpdateJson(json)
+                        .setUpdateSchemaVersion(mFakeFlags.getProtectedSignalsUpdateSchemaVersion())
+                        .build();
 
         UpdateOutput toReturn = new UpdateOutput();
         when(mUpdateProcessorSelectorMock.getUpdateProcessor(TEST_PROCESSOR))
@@ -449,11 +495,11 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
                 ADTECH,
                 PACKAGE,
                 NOW,
-                json,
+                signalUpdates,
                 DEV_CONTEXT,
                 mUpdateSignalsApiCalledStats,
                 mUpdateSignalsProcessReportedLoggerMock);
-        verifyZeroInteractions(mUpdateEncoderEventHandlerMock);
+        verifyNoMoreInteractions(mUpdateEncoderEventHandlerMock);
         verify(mForcedEncoderMock).forceEncodingAndUpdateEncoderForBuyer(ADTECH);
     }
 
@@ -461,6 +507,11 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
     public void testUpdatesProcessorSingleEncoderUpdate() throws JSONException {
         JSONObject json = new JSONObject();
         json.put(TEST_PROCESSOR, new JSONObject());
+        SignalUpdates signalUpdates =
+                SignalUpdates.builder()
+                        .setUpdateJson(json)
+                        .setUpdateSchemaVersion(mFakeFlags.getProtectedSignalsUpdateSchemaVersion())
+                        .build();
 
         UpdateOutput toReturn = new UpdateOutput();
         UpdateEncoderEvent event =
@@ -476,19 +527,24 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
                 ADTECH,
                 PACKAGE,
                 NOW,
-                json,
+                signalUpdates,
                 DEV_CONTEXT,
                 mUpdateSignalsApiCalledStats,
                 mUpdateSignalsProcessReportedLoggerMock);
         verify(mUpdateEncoderEventHandlerMock)
                 .handle(CommonFixture.VALID_BUYER_1, event, DEV_CONTEXT);
-        verifyZeroInteractions(mForcedEncoderMock);
+        verifyNoMoreInteractions(mForcedEncoderMock);
     }
 
     @Test
     public void testUpdatesProcessorSingleInsert_evictNewlyAddedSignal() throws Exception {
         JSONObject json = new JSONObject();
         json.put(TEST_PROCESSOR, new JSONObject());
+        SignalUpdates signalUpdates =
+                SignalUpdates.builder()
+                        .setUpdateJson(json)
+                        .setUpdateSchemaVersion(mFakeFlags.getProtectedSignalsUpdateSchemaVersion())
+                        .build();
 
         when(mProtectedSignalsDaoMock.getSignalsByBuyer(any())).thenReturn(Collections.emptyList());
 
@@ -503,8 +559,8 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
         SignalEvictionController signalEvictionController =
                 new SignalEvictionController(
                         List.of(new FifoSignalEvictor()),
-                        mMockFlags.getProtectedSignalsMaxSignalSizePerBuyerBytes(),
-                        mMockFlags
+                        mFakeFlags.getProtectedSignalsMaxSignalSizePerBuyerBytes(),
+                        mFakeFlags
                                 .getProtectedSignalsMaxSignalSizePerBuyerWithOversubsciptionBytes()) {
                     @Override
                     public void evict(
@@ -527,7 +583,7 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
                 ADTECH,
                 PACKAGE,
                 NOW,
-                json,
+                signalUpdates,
                 DEV_CONTEXT,
                 mUpdateSignalsApiCalledStats,
                 mUpdateSignalsProcessReportedLoggerMock);
@@ -569,8 +625,7 @@ public class UpdateProcessingOrchestratorTest extends AdServicesExtendedMockitoT
 
             @Override
             public UpdateOutput processUpdates(
-                    Object updates, Map<ByteBuffer, Set<DBProtectedSignal>> current)
-                    throws JSONException {
+                    Object updates, Map<ByteBuffer, Set<DBProtectedSignal>> current) {
                 return toReturn;
             }
         };
